# multi-agent_deep-researcher

./: .gitignore  PRODUCTION_DEPLOYMENT.md  README.md
.venv_test_install/: pyvenv.cfg
.venv_test_install/Scripts/: activate  activate.bat  dumppdf.py  pdf2txt.py
backend/: .env.example  .gitignore  README.md  agents.py  app.py  pyproject.toml  requirements.in  requirements.txt  server.py  test_security.py
backend/app/: main.py
backend/app/api/: models.py  routes.py
backend/app/core/: agents_legacy.py  config.py
backend/app/services/: job_manager.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/privacy/: page.tsx
frontend/app/research/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/ui/: button.tsx  card.tsx
multiagent_deep_researcher/: .env.example  .gitignore  app.py  pyproject.toml  run_app.ps1
